<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="HELLO">

    </TextView>

    <ImageView
        android:id="@+id/dice_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/empty_dice"
        tools:srcCompat="@drawable/dice_1" />

    <Button
        android:id="@+id/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/roll" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Reset" />

    <Spinner
        android:id="@+id/test_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >

    </Spinner>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:max="100"
        android:min="0"
        android:progress="3"
        android:layout_marginTop="10dp"
        >

    </SeekBar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
    <TextView
        android:id="@+id/text_one"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="32sp"
        
        >
    </TextView>
        <TextView
            android:id="@+id/text_two"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_gravity="center"
            >
        </TextView>

    </LinearLayout>

</LinearLayout>
